# crypto-price-predictor

./: .gitignore  Makefile  README.md  redpanda.yml
docker-compose/: Makefile  backfill-pipeline.yml  feature-pipeline.yml  redpanda.yml
services/price_predictor/: Dockerfile  Makefile  pyproject.toml
services/price_predictor/src/: config.py  hopsworks_wrapper.py  ohlc_data_reader.py  technical_indicators.py  training.py
services/price_predictor/src/models/: current_price_baseline.py  moving_averages_baseline.py  xgboost_model.py
services/topic-to-feature-store/: .env.example  Dockerfile  Makefile  pyproject.toml
services/topic-to-feature-store/src/: config.py  hopswork_api.py  main.py
services/trade-producer/: .env.example  Dockerfile  Makefile  pyproject.toml
services/trade-producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade-producer/src/api/: base.py  kraken_rest_api.py  kraken_websocket_api.py  trade.py  utils.py
services/trade-to-ohlc/: .env.example  Makefile  pyproject.toml
services/trade-to-ohlc/src/: config.py  main.py
