[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jsonsinger <hello@jasonsinger.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hopsworks = "^3.7.0"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
