[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jsonsinger <hello@jasonsinger.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hopsworks = "^3.7.0"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"
scikit-learn = "^1.5.2"
comet-ml = "^3.46.0"
xgboost = "^2.1.1"
graphviz = "^0.20.3"
ta-lib = "^0.4.32"
optuna = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]