[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jsonsinger <hello@jasonsinger.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quixstreams = "^2.10.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
